# stream-rust-test

./: .dockerignore  .gitignore  COMMANDS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: codecov.yaml  dependabot.yaml
.github/workflows/: check.yaml  ci.yaml  coverage.yaml  dco.yaml  reuse-lint.yaml  test.yaml
.reuse/: dep5
astarte-device-conf/: config.toml
interfaces/: org.astarte-platform.genericcommands.ServerCommands.json  org.astarte-platform.genericsensors.Values.json
scripts/: run.sh
scripts/docker/: .env  Dockerfile  build.sh  entrypoint.sh
src/: astarte.rs  cli.rs  config.rs  lib.rs  main.rs  math.rs  shutdown.rs
