# This file is part of Astarte.
#
# Copyright 2024 SECO Mind Srl
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "stream-rust-test"
version = "0.1.0"
categories = ["embedded", "api-bindings"]
edition = "2021"
homepage = "https://astarte.cloud/"
keywords = ["rust", "iot", "astarte", "mqtt-client"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/astarte-platform/stream-rust-test"
rust-version = "1.72.0"
description = "Astarte Rust SDK based data stream test."

[dependencies]
astarte-device-sdk = { version = "0.9.6", features = ["derive", "message-hub"] }
clap = { version = "=4.4.18", features = ["derive", "env", "string"] }
color-eyre = "0.6.3"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "sync", "macros", "signal"] }
toml = "0.8.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[features]
docker = []
