# This file is part of Astarte.
#
# Copyright 2024 SECO Mind Srl
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "stream-rust-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://astarte.cloud/"
categories = ["embedded", "api-bindings"]
keywords = ["rust", "iot", "astarte", "mqtt-client"]
readme = "README.md"
repository = "https://github.com/astarte-platform/stream-rust-test"
rust-version = "1.72.0"
description = "Astarte Rust SDK based data stream test."

[dependencies]
astarte-device-sdk = { version = "0.9.2", features = ["message-hub"] }
clap = { version = "=4.4.18", features = ["derive", "env", "string"] }
color-eyre = "0.6.3"
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "sync", "macros", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"]}
rand = "0.8.5"
serde = { version = "1.0.207", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
